# needle

./: CMakeLists.txt
include/: common.hpp  computational_graph.hpp  memory.hpp  ndarray.hpp  needle_util.cuh  ops.cuh  optimize.cuh  tensor.cuh  tensor.hpp  tensor_op.hpp
include/backend/: base_array.hpp  base_tensor.hpp  cpu_backend.hpp  cpu_tensor.hpp  cuda_backend.cuh  cuda_tensor.hpp  cuda_util.cuh
include/init/: init_basic.cuh  initial.cuh  initial.hpp
include/nn/: function.cuh  linear.cuh  nn_basic.cuh  nn_module.cuh  padding.cuh
include/ops/: broadcast.cuh  ew.cuh  ewadd.cuh  generic_op.cuh  matmul.cuh  ops_math.cuh  ops_math.hpp  permute.cuh  reshape.cuh  setitem.cuh  slice.cuh  summation.cuh  tensor_op.cuh  tensor_op.hpp  transpose.cuh
include/ops/bp/: broadcast.cuh  dilate.cuh  ew.cuh  exp.cuh  flip.cuh  log.cuh  matmul.cuh  max.cuh  neg.cuh  padding.cuh  relu.cuh  reshape.cuh  setitem.cuh  slice.cuh  split.cuh  stack.cuh  summation.cuh  tanh.cuh
kernel/: ewise_add.cu  ewise_div.cu  ewise_minus.cu  ewise_mul.cu  ops.cu
kernel/include/: ewise_add.cuh  ewise_div.cuh  ewise_minus.cuh  ewise_mul.cuh  ops.cuh
lib/: common.cpp  memory.cpp  tensor.cpp  tensor.cu
unit_test/: tensor.py  test.cpp  test.py  test.sh
unittest/: test.cpp  test.py
